resolve background issue on mobile

--- a/style.css
+++ b/style.css
@@ -5,13 +5,11 @@
 
 body {
     font-family: "Pixel", Arial, sans-serif;
-    color: #ffffff;
+    color: #7c7c7c;
     font-size: 3vw;
     text-align: center;
     justify-content: center;
     align-items: center;
-    background: #0F2027;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
     user-select: none;
 }
